--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^0.17.2",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "18.1.0",
     "react-dom": "^18.2.0",
     "react-native": "0.70.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-web": "^0.18.10",
-    "@expo/webpack-config": "^0.17.2"
+    "react-native-web": "^0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
